--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,8 @@
                 <li><button type="button">Design</button></li>
                 <li><button type="button">Marketing</button></li>
               </ul>  
-        </section>  
-<section>
-    
+
+    <!-- Список проектных карточек -->
 <h2>Project cards</h2>
 <ul>
     <li><img src="./images/BankingApp.jpg" alt="Banking App Interface Concept" width="360" lenth="300"/>
@@ -73,6 +72,7 @@
 <h3>Fresh Coffee</h3>
         <p>Web Site</p>
 </ul>
+</section>
     </main>
 
 <footer>
