--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
             <a href="./index.html" title="Web Studio">Web Studio</a>
                 <ul>
                      <li><a href="./index.html">Studio</a></li>
-                     <li><a href="#">Portfolio</a></li>
+                     <li><a href="./portfolio.html">Portfolio</a></li>
                      <li><a href="#">Contacts</a></li>
                 </ul>
          </nav>
