--- a/portfolio.html
+++ b/portfolio.html
@@ -1,86 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-     <link rel="stylesheet" href="./css/style.css" />
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+
+       <!-- HEADER -->
+
     <header>
-        <nav>
-            <a href="./index.html" title="Web Studio">Web Studio</a>
-                <ul>
-                     <li><a href="./index.html">Studio</a></li>
-                     <li><a href="./portfolio.html">Portfolio</a></li>
-                     <li><a href="#">Contacts</a></li>
-                </ul>
-         </nav>
-                <ul>
-                      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                      <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
-                </ul>  
+      <nav>
+        <a class="link logo" href="./index.html" title="Web Studio"
+          ><span>Web</span>Studio</a
+        >
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="#">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="list">
+        <li>
+          <a class="contact link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contact link" href="tel:+11(000)111-11-11"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+      </ul>
     </header>
+
+    <!-- Filter -->
     <main>
-         <section>
-            <h1>Service List</h1>
-              <ul>
-                <li><button type="button">All</button></li>
-                <li><button type="button">Web Site</button></li>
-                <li><button type="button">App</button></li>
-                <li><button type="button">Design</button></li>
-                <li><button type="button">Marketing</button></li>
-              </ul>  
+      <section>
+        <h1 class="filter-title">Service List</h1>
+        <ul class="list">
+          <li class="modal-button"><button type="button">All</button></li>
+          <li class="modal-button"><button type="button">Web Site</button></li>
+          <li class="modal-button"><button type="button">App</button></li>
+          <li class="modal-button"><button type="button">Design</button></li>
+          <li class="modal-button"><button type="button">Marketing</button></li>
+        </ul>
 
-    <!-- Список проектных карточек -->
-<h2>Project cards</h2>
-<ul>
-    <li><img src="./images/BankingApp.jpg" alt="Banking App Interface Concept" width="360" lenth="300"/>
-      <h3>Banking App Interface Concept</h3>
-        <p>App</p>
-    </li>
-    <li><img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360" lenth="300" />
-      <h3>Cashless Payment</h3>
-        <p>Marketing</p>
-    </li>
-<li><img src="./images/MeditationApp.jpg" alt="Meditaion App"/>
-     <h3>Meditaion App</h3>
-        <p>App</p>
-</li>
-<li><img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" lenth="300"> 
-<h3>Taxi Service</h3>
-        <p>Marketing</p>
-</li>
-<li><img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" lenth="300"> 
-<h3>Screen Illustrations</h3>
-        <p>Design</p>
-</li>
-<li> <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" lenth="300"> 
-<h3>Online Courses</h3>
-        <p>Marketing</p>
-</li>
-<li><img src="./images/InstagramStories.jpg" alt="Instagram Stories Concept"  width="360" lenth="300"/> 
-<h3>Instagram Stories Concept</h3>
-        <p>Design</p>
-</li>
-<li><img src="./images/OrganicFood.jpg" alt="Organic Food"  width="360" lenth="300"/> 
-<h3>Organic Food</h3>
-        <p>Web Site</p>
+        <!-- List of project cards -->
 
-</li>
-<li><img src="./images/FreshCoffee.jpg" alt="Fresh Coffee" width="360" lenth="300"/> </li>
-<h3>Fresh Coffee</h3>
-        <p>Web Site</p>
-</ul>
-</section>
+        <h2 class="card-title">Project cards</h2>
+        <ul class="list">
+          <li>
+            <img
+              src="./images/BankingApp.jpg"
+              alt="Banking App Interface Concept"
+              width="360"
+              lenth="300"
+            />
+            <h3 class="card-item">Banking App Interface Concept</h3>
+            <p class="card-description">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/CashlessPayment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              lenth="300"
+            />
+            <h3 class="card-item">Cashless Payment</h3>
+            <p class="card-description">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/MeditationApp.jpg" alt="Meditaion App" />
+            <h3 class="card-item">Meditaion App</h3>
+            <p class="card-description">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/TaxiService.jpg"
+              alt="Taxi Service"
+              width="360"
+              lenth="300"
+            />
+            <h3 class="card-item">Taxi Service</h3>
+            <p class="card-description">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/ScreenIllustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              lenth="300"
+            />
+            <h3 class="card-item">Screen Illustrations</h3>
+            <p class="card-description">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/OnlineCourses.jpg"
+              alt="Online Courses"
+              width="360"
+              lenth="300"
+            />
+            <h3 class="card-item">Online Courses</h3>
+            <p class="card-description">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/InstagramStories.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+              lenth="300"
+            />
+            <h3 class="card-item">Instagram Stories Concept</h3>
+            <p class="card-description">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/OrganicFood.jpg"
+              alt="Organic Food"
+              width="360"
+              lenth="300"
+            />
+            <h3 class="card-item">Organic Food</h3>
+            <p class="card-description">Web Site</p>
+          </li>
+          <li>
+            <img
+              src="./images/FreshCoffee.jpg"
+              alt="Fresh Coffee"
+              width="360"
+              lenth="300"
+            />
+          </li>
+          <h3 class="card-item">Fresh Coffee</h3>
+          <p class="card-description">Web Site</p>
+        </ul>
+      </section>
     </main>
 
-<footer>
-             <a href="./index.html" title="Web Studio">Web Studio</a>
-           <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-</footer>
-</body>
+    <!-- Footer -->
 
-
+    <footer class="footer">
+       <a class="link logo-footer" href="./index.html" title="Web Studio"
+          ><span>Web</span> Studio</a>
+      <p  class="description-section footer-about" >
+        Increase the flow of customers and sales for your business with digital
+        marketing and growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
