Добавляет свойство active к кнопкам

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,11 +53,11 @@
       <section>
         <h1 class="filter-title">Service List</h1>
         <ul class="list">
-          <li class="modal-button"><button type="button">All</button></li>
-          <li class="modal-button"><button type="button">Web Site</button></li>
-          <li class="modal-button"><button type="button">App</button></li>
-          <li class="modal-button"><button type="button">Design</button></li>
-          <li class="modal-button"><button type="button">Marketing</button></li>
+          <li><button class="modal-button" type="button">All</button></li>
+          <li><button class="modal-button" type="button">Web Site</button></li>
+          <li><button class="modal-button" type="button">App</button></li>
+          <li><button class="modal-button" type="button">Design</button></li>
+          <li><button class="modal-button" type="button">Marketing</button></li>
         </ul>
 
         <!-- List of project cards -->
@@ -69,7 +69,7 @@
               src="./images/BankingApp.jpg"
               alt="Banking App Interface Concept"
               width="360"
-              lenth="300"
+              height="300"
             />
             <h3 class="card-item">Banking App Interface Concept</h3>
             <p class="card-description">App</p>
@@ -79,7 +79,7 @@
               src="./images/CashlessPayment.jpg"
               alt="Cashless Payment"
               width="360"
-              lenth="300"
+              height="300"
             />
             <h3 class="card-item">Cashless Payment</h3>
             <p class="card-description">Marketing</p>
@@ -94,7 +94,7 @@
               src="./images/TaxiService.jpg"
               alt="Taxi Service"
               width="360"
-              lenth="300"
+              height="300"
             />
             <h3 class="card-item">Taxi Service</h3>
             <p class="card-description">Marketing</p>
@@ -104,7 +104,7 @@
               src="./images/ScreenIllustrations.jpg"
               alt="Screen Illustrations"
               width="360"
-              lenth="300"
+              height="300"
             />
             <h3 class="card-item">Screen Illustrations</h3>
             <p class="card-description">Design</p>
@@ -114,7 +114,7 @@
               src="./images/OnlineCourses.jpg"
               alt="Online Courses"
               width="360"
-              lenth="300"
+              height="300"
             />
             <h3 class="card-item">Online Courses</h3>
             <p class="card-description">Marketing</p>
@@ -124,7 +124,7 @@
               src="./images/InstagramStories.jpg"
               alt="Instagram Stories Concept"
               width="360"
-              lenth="300"
+              height="300"
             />
             <h3 class="card-item">Instagram Stories Concept</h3>
             <p class="card-description">Design</p>
@@ -134,7 +134,7 @@
               src="./images/OrganicFood.jpg"
               alt="Organic Food"
               width="360"
-              lenth="300"
+              height="300"
             />
             <h3 class="card-item">Organic Food</h3>
             <p class="card-description">Web Site</p>
@@ -144,11 +144,11 @@
               src="./images/FreshCoffee.jpg"
               alt="Fresh Coffee"
               width="360"
-              lenth="300"
+              height="300"
             />
-          </li>
-          <h3 class="card-item">Fresh Coffee</h3>
+            <h3 class="card-item">Fresh Coffee</h3>
           <p class="card-description">Web Site</p>
+          </li>
         </ul>
       </section>
     </main>
