--- a/portfolio.html
+++ b/portfolio.html
@@ -65,89 +65,89 @@
         <h2 class="card-title">Project cards</h2>
         <ul class="list">
           <li>
-            <img
+            <a class="link" href="#"><img
               src="./images/BankingApp.jpg"
               alt="Banking App Interface Concept"
               width="360"
               height="300"
             />
             <h3 class="card-item">Banking App Interface Concept</h3>
-            <p class="card-description">App</p>
+            <p class="card-description">App</p> </a>
           </li>
           <li>
-            <img
+           <a class="link" href="#"> <img
               src="./images/CashlessPayment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
             <h3 class="card-item">Cashless Payment</h3>
-            <p class="card-description">Marketing</p>
+            <p class="card-description">Marketing</p></a>
           </li>
           <li>
-            <img src="./images/MeditationApp.jpg" alt="Meditaion App" />
+            <a class="link" href="#"><img src="./images/MeditationApp.jpg" alt="Meditaion App" />
             <h3 class="card-item">Meditaion App</h3>
-            <p class="card-description">App</p>
+            <p class="card-description">App</p></a>
           </li>
           <li>
-            <img
+           <a class="link" href="#"> <img
               src="./images/TaxiService.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
             <h3 class="card-item">Taxi Service</h3>
-            <p class="card-description">Marketing</p>
+            <p class="card-description">Marketing</p></a>
           </li>
           <li>
-            <img
+           <a class="link" href="#"><img
               src="./images/ScreenIllustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
             <h3 class="card-item">Screen Illustrations</h3>
-            <p class="card-description">Design</p>
+            <p class="card-description">Design</p></a>
           </li>
           <li>
-            <img
+           <a class="link" href="#"> <img
               src="./images/OnlineCourses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
             <h3 class="card-item">Online Courses</h3>
-            <p class="card-description">Marketing</p>
+            <p class="card-description">Marketing</p></a>
           </li>
           <li>
-            <img
+           <a class="link" href="#"><img
               src="./images/InstagramStories.jpg"
               alt="Instagram Stories Concept"
               width="360"
               height="300"
             />
             <h3 class="card-item">Instagram Stories Concept</h3>
-            <p class="card-description">Design</p>
+            <p class="card-description">Design</p></a> 
           </li>
           <li>
-            <img
+           <a class="link" href="#"> <img
               src="./images/OrganicFood.jpg"
               alt="Organic Food"
               width="360"
               height="300"
             />
             <h3 class="card-item">Organic Food</h3>
-            <p class="card-description">Web Site</p>
+            <p class="card-description">Web Site</p></a>
           </li>
           <li>
-            <img
+           <a class="link" href="#"><img
               src="./images/FreshCoffee.jpg"
               alt="Fresh Coffee"
               width="360"
               height="300"
             />
             <h3 class="card-item">Fresh Coffee</h3>
-          <p class="card-description">Web Site</p>
+          <p class="card-description">Web Site</p></a> 
           </li>
         </ul>
       </section>
